@@ -126,8 +126,7 @@ public class ComplexPackageNameTest {
         Assert.assertEquals(ports.get(0), "9090/tcp");
         // Validate ballerina.conf in run command
         Assert.assertEquals(getEntryPoint(DOCKER_IMAGE).toString(),
-                "[java, --sun-misc-unsafe-memory-access=allow, " +
-                        "--enable-native-access=ALL-UNNAMED, -XX:+ExitOnOutOfMemoryError, -Xdiag, -cp, " +
+                "[java, --enable-native-access=ALL-UNNAMED, -XX:+ExitOnOutOfMemoryError, -Xdiag, -cp, " +
                         "anjana-testObservation_0.1.5-0.1.0.jar:jars/*, " +
                         "anjana.testObservation_0&00461&00465.0.$_init]");
     }
