@@ -70,7 +70,7 @@ public class NativeJobTest extends SampleTest {
         File dockerFile = DOCKER_TARGET_PATH.resolve("Dockerfile").toFile();
         Assert.assertTrue(dockerFile.exists());
         String content = Files.readString(dockerFile.toPath(), StandardCharsets.UTF_8);
-        Assert.assertTrue(content.contains("RUN native-image -J--sun-misc-unsafe-memory-access=allow "
+        Assert.assertTrue(content.contains("RUN native-image "
                 + "--enable-native-access=ALL-UNNAMED -jar hello.jar -o hello --no-fallback "
                 + "-H:+StaticExecutableWithDynamicLibC"));
         Assert.assertTrue(content.contains("FROM " + DockerGenConstants.NATIVE_BUILDER_IMAGE + " as build"));
